examples/datalog/18_advanced_patterns/38_distinct_count.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_distinct
Knowledge graph 'test_distinct' created.
Switched to knowledge graph: test_distinct
> .kg use test_distinct
Switched to knowledge graph: test_distinct
> +purchases[(1, "Alice", "Widget"), (2, "Bob", "Gadget"), (3, "Alice", "Widget"), (4, "Carol", "Widget")].
Inserted 4 fact(s) into 'purchases'.
> +distinct_products(<COUNT_DISTINCT:Product>) :- purchases(_, _, Product).
Script error: Parse error: Invalid term: '<COUNT_DISTINCT:Product>'
